[PDI-12238]: Fix build artifacts for plugin product

--- a/build.properties
+++ b/build.properties
@@ -1,12 +1,11 @@
-plugin-id=TeraDataBulkLoader
+plugin-id=pdi-teradata-tpt-plugin
 project.revision=TRUNK-SNAPSHOT
-ivy.artifact.group=my-group
+ivy.artifact.group=pentaho
 ivy.artifact.id=${plugin-id}
 impl.vendor=Pentaho
 impl.title=Teradata TPT Insert Upsert Bulk Loader
 impl.productID=${plugin-id}
-basedir=.
-devlib.dir=dev-lib
+package.id=${plugin-id}-package
 
 dependency.kettle.revision=TRUNK-SNAPSHOT
 dependency.pentaho-xul.revision=TRUNK-SNAPSHOT
