--- a/ivy.xml
+++ b/ivy.xml
@@ -34,5 +34,7 @@
     
     <!-- Test dependencies (JUnit, etc.) These should use the test configuration -->
     <dependency org="junit" name="junit" rev="${dependency.junit.revision}" transitive="false" conf="test->default"/>
+	<dependency org="org.mockito"              name="mockito-all"          rev="1.8.4"  transitive="false" conf="test->default"/>
+	<dependency org="pentaho-kettle" name="kettle-engine-test" rev="${dependency.kettle.revision}" changing="true" transitive="false" conf="test->default" />
   </dependencies>
 </ivy-module>
