--- a/build.properties
+++ b/build.properties
@@ -11,6 +11,6 @@ dependency.kettle.revision=6.0-SNAPSHOT
 dependency.pentaho-xul.revision=6.0-SNAPSHOT
 
 dependency.commons-io.revision=1.4
-dependency.commons-vfs.revision=20091118-pentaho
+dependency.commons-vfs.revision=2.0
 
 dependency.junit.revision=4.7
