--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,5 @@
 plugin-id=pdi-teradata-tpt-plugin
-project.revision=5.4-SNAPSHOT
+project.revision=5.4.1.5-191
 ivy.artifact.group=pentaho
 ivy.artifact.id=${plugin-id}
 impl.vendor=Pentaho
@@ -7,8 +7,8 @@ impl.title=Teradata TPT Insert Upsert Bulk Loader
 impl.productID=${plugin-id}
 package.id=${plugin-id}-package
 
-dependency.kettle.revision=5.4-SNAPSHOT
-dependency.pentaho-xul.revision=5.4-SNAPSHOT
+dependency.kettle.revision=5.4.1.5-191
+dependency.pentaho-xul.revision=5.4.1.5-191
 
 dependency.commons-io.revision=1.4
 dependency.commons-vfs.revision=20091118-pentaho
