--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,68 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <groupId>org.pentaho</groupId>
-    <artifactId>pentaho-ce-jar-parent-pom</artifactId>
+    <groupId>org.pentaho.di.plugins</groupId>
+    <artifactId>pdi-teradata-tpt-plugin-parent</artifactId>
     <version>8.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-<<<<<<< 8a22104bf3449019908e8c760135e94e5802f5ed
-  <groupId>pentaho</groupId>
-  <artifactId>pdi-teradata-tpt-plugin</artifactId>
+  <groupId>org.pentaho.di.plugins</groupId>
+  <artifactId>pdi-teradata-tpt-plugin-core</artifactId>
   <version>8.0-SNAPSHOT</version>
   <packaging>jar</packaging>
-=======
-  <groupId>org.pentaho.di.plugins</groupId>
-  <artifactId>pdi-teradata-tpt-plugin-parent</artifactId>
-  <version>8.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <modules>
-    <module>core</module>
-    <module>assemblies</module>
-  </modules>
->>>>>>> [BACKLOG-12678] Mavenization
+  <name>${project.artifactId}</name>
   <scm>
     <developerConnection>scm:git:git@github.com:pentaho/pdi-teradata-tpt-plugin.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
-  <properties>
-    <kettle.version>8.0-SNAPSHOT</kettle.version>
-    <pentaho.version>8.0-SNAPSHOT</pentaho.version>
-    <commons-io.version>1.4</commons-io.version>
-    <apache-commons.version>2.1-20150824</apache-commons.version>
-    <junit.version>4.7</junit.version>
-    <mockito.version>1.8.4</mockito.version>
-  </properties>
   <dependencies>
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>${commons-io.version}</version>
       <scope>compile</scope>
-<<<<<<< 8a22104bf3449019908e8c760135e94e5802f5ed
-=======
       <exclusions>
         <exclusion>
           <groupId>*</groupId>
           <artifactId>*</artifactId>
         </exclusion>
       </exclusions>
->>>>>>> [BACKLOG-12678] Mavenization
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-vfs2</artifactId>
       <version>${apache-commons.version}</version>
       <scope>compile</scope>
-<<<<<<< 8a22104bf3449019908e8c760135e94e5802f5ed
-=======
       <exclusions>
         <exclusion>
           <groupId>*</groupId>
           <artifactId>*</artifactId>
         </exclusion>
       </exclusions>
->>>>>>> [BACKLOG-12678] Mavenization
     </dependency>
     <dependency>
       <groupId>pentaho-kettle</groupId>
@@ -75,15 +51,12 @@
       <artifactId>kettle-core</artifactId>
       <version>${kettle.version}</version>
       <scope>provided</scope>
-<<<<<<< 8a22104bf3449019908e8c760135e94e5802f5ed
-=======
       <exclusions>
         <exclusion>
           <groupId>*</groupId>
           <artifactId>*</artifactId>
         </exclusion>
       </exclusions>
->>>>>>> [BACKLOG-12678] Mavenization
     </dependency>
     <dependency>
       <groupId>pentaho-kettle</groupId>
@@ -96,38 +69,30 @@
       <artifactId>pentaho-xul-core</artifactId>
       <version>${pentaho.version}</version>
       <scope>provided</scope>
-<<<<<<< 8a22104bf3449019908e8c760135e94e5802f5ed
-=======
       <exclusions>
         <exclusion>
           <groupId>*</groupId>
           <artifactId>*</artifactId>
         </exclusion>
       </exclusions>
->>>>>>> [BACKLOG-12678] Mavenization
     </dependency>
     <dependency>
       <groupId>pentaho</groupId>
       <artifactId>pentaho-xul-swt</artifactId>
       <version>${pentaho.version}</version>
       <scope>provided</scope>
-<<<<<<< 8a22104bf3449019908e8c760135e94e5802f5ed
-=======
       <exclusions>
         <exclusion>
           <groupId>*</groupId>
           <artifactId>*</artifactId>
         </exclusion>
       </exclusions>
->>>>>>> [BACKLOG-12678] Mavenization
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
-<<<<<<< 8a22104bf3449019908e8c760135e94e5802f5ed
-=======
       <exclusions>
         <exclusion>
           <groupId>*</groupId>
@@ -141,22 +106,18 @@
       <version>${kettle.version}</version>
       <classifier>tests</classifier>
       <scope>test</scope>
->>>>>>> [BACKLOG-12678] Mavenization
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
       <version>${mockito.version}</version>
       <scope>test</scope>
-<<<<<<< 8a22104bf3449019908e8c760135e94e5802f5ed
-=======
       <exclusions>
         <exclusion>
           <groupId>*</groupId>
           <artifactId>*</artifactId>
         </exclusion>
       </exclusions>
->>>>>>> [BACKLOG-12678] Mavenization
     </dependency>
   </dependencies>
 </project>
