--- a/assemblies/plugin/pom.xml
+++ b/assemblies/plugin/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <groupId>org.pentaho.di.plugins</groupId>
         <artifactId>pdi-teradata-tpt-plugin-assemblies</artifactId>
-        <version>8.0-SNAPSHOT</version>
+        <version>8.0.0.1-99</version>
     </parent>
     <groupId>org.pentaho.di.plugins</groupId>
     <artifactId>pdi-teradata-tpt-plugin-package</artifactId>
-    <version>8.0-SNAPSHOT</version>
+    <version>8.0.0.1-99</version>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
     <description></description>
