--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <pdi.version>8.1.0.0-SNAPSHOT</pdi.version>
     <commons-xul.version>8.1.0.0-SNAPSHOT</commons-xul.version>
     <commons-io.version>1.4</commons-io.version>
-    <apache-commons.version>2.1-20150824</apache-commons.version>
+    <commons-vfs2>2.2</commons-vfs2>
     <junit.version>4.7</junit.version>
     <mockito.version>1.8.4</mockito.version>
   </properties>
@@ -42,7 +42,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-vfs2</artifactId>
-      <version>${apache-commons.version}</version>
+      <version>${commons-vfs2}</version>
       <scope>compile</scope>
       <exclusions>
         <exclusion>
