--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,5 @@
 plugin-id=pdi-teradata-tpt-plugin
-project.revision=7.1-SNAPSHOT
+project.revision=7.1.0.21-185
 ivy.artifact.group=pentaho
 ivy.artifact.id=${plugin-id}
 impl.vendor=Pentaho
@@ -7,8 +7,8 @@ impl.title=Teradata TPT Insert Upsert Bulk Loader
 impl.productID=${plugin-id}
 package.id=${plugin-id}-package
 
-dependency.kettle.revision=7.1-SNAPSHOT
-dependency.pentaho-xul.revision=7.1-SNAPSHOT
+dependency.kettle.revision=7.1.0.21-185
+dependency.pentaho-xul.revision=7.1.0.21-185
 
 dependency.commons-io.revision=1.4
 dependency.commons-vfs.revision=2.1-20150824
