--- a/assemblies/pom.xml
+++ b/assemblies/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <groupId>org.pentaho.di.plugins</groupId>
         <artifactId>pdi-teradata-tpt-plugin-parent</artifactId>
-        <version>9.3.0.0-SNAPSHOT</version>
+        <version>9.3.0.0-275</version>
     </parent>
     <groupId>org.pentaho.di.plugins</groupId>
     <artifactId>pdi-teradata-tpt-plugin-assemblies</artifactId>
-    <version>9.3.0.0-SNAPSHOT</version>
+    <version>9.3.0.0-275</version>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
     <description></description>
