--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-ce-jar-parent-pom</artifactId>
-    <version>9.5.0.0-SNAPSHOT</version>
+    <version>9.5.0.0-103</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.pentaho.di.plugins</groupId>
   <artifactId>pdi-teradata-tpt-plugin-parent</artifactId>
-  <version>9.5.0.0-SNAPSHOT</version>
+  <version>9.5.0.0-103</version>
   <packaging>pom</packaging>
   <modules>
     <module>core</module>
@@ -19,8 +19,8 @@
     <tag>HEAD</tag>
   </scm>
   <properties>
-    <pdi.version>9.5.0.0-SNAPSHOT</pdi.version>
-    <commons-xul.version>9.5.0.0-SNAPSHOT</commons-xul.version>
+    <pdi.version>9.5.0.0-103</pdi.version>
+    <commons-xul.version>9.5.0.0-103</commons-xul.version>
     <junit.version>4.7</junit.version>
     <mockito.version>1.8.4</mockito.version>
   </properties>
