--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
   <properties>
     <pdi.version>10.2.0.0-SNAPSHOT</pdi.version>
     <commons-xul.version>10.2.0.0-SNAPSHOT</commons-xul.version>
-    <junit.version>4.7</junit.version>
-    <mockito.version>1.8.4</mockito.version>
+    <junit.version>4.13.2</junit.version>
+    <mockito.version>5.10.0</mockito.version>
   </properties>
   <dependencies>
     <dependency>
@@ -128,8 +128,32 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-all</artifactId>
+      <version>1.3</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.bytebuddy</groupId>
+      <artifactId>byte-buddy-agent</artifactId>
+      <version>1.12.16</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.bytebuddy</groupId>
+      <artifactId>byte-buddy</artifactId>
+      <version>1.12.16</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.objenesis</groupId>
+      <artifactId>objenesis</artifactId>
+      <version>2.3</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
+      <artifactId>mockito-core</artifactId>
       <version>${mockito.version}</version>
       <scope>test</scope>
       <exclusions>
